# cubrick

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  config-overrides.js  nodemon.json  package.json
client/: index.tsx
server/: index.ts  main.rs
